chore: clean up test Tags as discussed
Signed-off-by: Jendrik Johannes <jendrik.johannes@gmail.com>